# q-a-assistant

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: cli.py  config.py  logging_conf.py  main.py  security.py
app/api/: deps.py  limits.py  server.py
app/api/routes/: chat.py  health.py
app/core/: cache.py  context.py  evaluation.py  llm.py  memory.py  prompts.py  retrieval.py  router.py
app/models/: schemas.py
app/tools/: __init__.py  stocks.py  tool_registry.py  weather.py
evaluator/: testcases.yaml
tests/: test_router.py  test_tools.py
web/: app.js  index.html  styles.css
